// Copyright 2021 Harness Inc.
// 
// Licensed under the Apache License, Version 2.0
// http://www.apache.org/licenses/LICENSE-2.0

syntax = "proto3";

package io.harness.perpetualtask.polling;

option java_multiple_files = true;

message ManifestCollectionTaskParamsNg {
  string account_id = 1;
  string polling_doc_id = 2;
  bytes manifest_collection_params = 3;
}
